# EllipseDetection

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: eigen.cmake  opencv.cmake
src/: CMakeLists.txt  ellipse_contour.cpp  ellipse_contour.hpp  ellipse_stats.hpp  fitting.cpp  main.cpp  utilities.cpp  utilities.hpp
src/detection/: board.cpp  board.hpp  board_drawing.cpp  board_drawing.hpp  calibration_data.cpp  calibration_data.hpp  debug.cpp  debug.hpp  detection.cpp  detection.hpp  detection_parameters.cpp  detection_parameters.hpp  symmetries.cpp  symmetries.hpp  thresholds.cpp
src/detection/identification/: filtering.cpp  filtering.hpp  identification.cpp  identification.hpp  ordering.cpp  ordering.hpp
src/ellipses/: ellipse_stats.cpp  ellipses.cpp  ellipses.hpp  fitting.hpp
src/io/: debug.cpp  debug.hpp  save_path.cpp  save_path.hpp
